# into-the-odd-gui-app

./: Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
config/: default.ini
data/world_default/compendia/: gm-compendium.json  item-compendium.json
src/itom/: app.py
src/itom/components/: lists.py  main_frame.py  views.py
src/itom/controller/: json_controller.py  world_controller.py
src/itom/model/: character.py  definitions.py  misc_models.py  settings.py  utils.py  world.py
tests/: conftest.py  test_app.py
tests/controller/: test_json_controller.py  test_world_controller.py
tests/data/: mock_data.py  test-settings.ini
tests/model/: test_character.py  test_definitions.py  test_misc_models.py  test_settings.py  test_utils.py
tests/utils/: ito_mock_data_utils.py
