[tool.poetry]
name = "itom"
version = "0.1.0"
description = "A graphical user interface to manage characters and other world building components of the pen and paper game Into the Odd."
authors = ["Sebastian Führ <s.fuehr1@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sebastianfuehr/into-the-odd-gui-app"
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
appdirs = "^1.4.4"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.11"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-p no:cacheprovider", # deactivate pytest caching
    "--import-mode=importlib"
]

[tool.coverage.report]
exclude_lines = [
    'if __name__ == "__main__":',
    "def __repr__",
    "def __str__"
]
